# LibCMaker_Pixman

./: .appveyor.yml  .travis.yml  README.md  cmr_build_pixman.cmake
ci/: ci_lib_params.sh
cmake/: cmr_build_rules_pixman.cmake  cmr_find_package_pixman.cmake  cmr_get_download_params_pixman.cmake
cmake/modules/: FindPixman.cmake
patch/Pixman_CMake_Files/: CMakeLists.txt  LICENSE  README.md
patch/Pixman_CMake_Files/cmake/: AutoconfHelper.cmake  CheckCFlag.cmake  CheckInline.cmake  CheckTargetFeature.cmake  PixmanHelper.cmake  config.h.in.cmake
patch/Pixman_CMake_Files/demos/: CMakeLists.txt
patch/Pixman_CMake_Files/pixman/: CMakeLists.txt
patch/Pixman_CMake_Files/test/: CMakeLists.txt
samples/TestCompileWithPixman/: CMakeLists.txt
samples/TestCompileWithPixman/src/: example.cpp
samples/TestCompileWithPixman/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt  README.md
samples/ci_sample/src/: example_test.cpp
